--- a/NewsApp.WebAPI/NewsApp.WebAPI.csproj
+++ b/NewsApp.WebAPI/NewsApp.WebAPI.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NewsApp.Application\NewsApp.Application.csproj" />
+    <ProjectReference Include="..\NewsApp.Infrastructure\NewsApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
