--- a/NewsApp.WorkerService/NewsApp.WorkerService.csproj
+++ b/NewsApp.WorkerService/NewsApp.WorkerService.csproj
@@ -10,4 +10,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NewsApp.Application\NewsApp.Application.csproj" />
+    <ProjectReference Include="..\NewsApp.Infrastructure\NewsApp.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
