--- a/NewsApp.Infrastructure/NewsApp.Infrastructure.csproj
+++ b/NewsApp.Infrastructure/NewsApp.Infrastructure.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\NewsApp.Domain\NewsApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
