--- a/NewsApp.WorkerService/NewsApp.WorkerService.csproj
+++ b/NewsApp.WorkerService/NewsApp.WorkerService.csproj
@@ -8,11 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire" Version="1.8.17" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.8.17" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NewsApp.Application\NewsApp.Application.csproj" />
     <ProjectReference Include="..\NewsApp.Infrastructure\NewsApp.Infrastructure.csproj" />
+    <ProjectReference Include="..\NewsApp.Jobs\NewsApp.Jobs.csproj" />
   </ItemGroup>
 </Project>
